--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "next-starter-template",
 	"version": "0.1.1",
+	"license": "MIT",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
